Feature/upgrade to java 17 (#283)
* Upgrade to OpenJdk 17

* Upgrade to OpenJdk 17

* Upgrade to OpenJdk 17

* Upgrade to OpenJdk 17

* Upgrade to JDK 17 for Share test and AGS

* Upgrade to JDK 17 for AGS

* Removed the Test case for GDocs since A15 does not have GDocs fucntionality.

* Share Upgrade to 17 Code Cleanup

(cherry picked from commit b297e74c955d6244e30aa14939a51701b908708b)