@@ -87,6 +87,7 @@
                <configuration>
                   <argLine>
                      --illegal-access=permit
+                     --add-opens=java.base/java.lang=ALL-UNNAMED
                   </argLine>
                </configuration>
             </plugin>
